# duckertdesign

./: README.md  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json  vercel.json
imap-worker/: Dockerfile  fly.toml  package.json
imap-worker/src/: imap.ts  index.ts  publisher.ts
macapp/: index.html  package.json  vite.config.ts
macapp/src/: App.tsx  api.ts  store.ts
macapp/src-tauri/: Cargo.toml  tauri.conf.json
macapp/src-tauri/capabilities/: main.json
macapp/src-tauri/src/: lib.rs  main.rs
macapp/src/components/: ChatPane.tsx  EmailPane.tsx  Sidebar.tsx
macapp/src/hooks/: useChats.ts  useEmails.ts  useSSE.ts
public/: newchat.m4a  newmessage.m4a  sw.js
src/: middleware.ts  proxy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/admin/chats/: route.ts
src/app/api/admin/email/: route.ts
src/app/api/admin/emails/: route.ts
src/app/api/admin/events/: route.ts
src/app/api/admin/faq/: route.ts
src/app/api/admin/feedback/: route.ts
src/app/api/chat/: route.ts
src/app/api/contact/: route.ts
src/app/api/search/: route.ts
src/app/kontakt/: page.tsx
src/app/kundeservice/: page.tsx
src/app/kundeservice/mail/: page.tsx
src/app/mit/: layout.tsx  page.tsx
src/app/privatlivspolitik/: page.tsx
src/app/service-vilkar/: page.tsx
src/components/: About.tsx  CTA.tsx  ChatWidget.tsx  Contact.tsx  CookieConsent.tsx  Footer.tsx  Header.tsx  Hero.tsx  Logo.tsx  Services.tsx  Work.tsx
src/lib/: auth.ts  chatStore.ts  cors.ts  faq.ts  supabase.ts  types.ts
supabase/: schema.sql
(+32 files in other folders)
