[package]
name = "duckert-admin"
version = "1.0.0"
description = "Duckert Design Admin App"
authors = ["Duckert Design"]
edition = "2021"

[lib]
name = "duckert_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "duckert-admin"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "devtools"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
